# sine_macro

./: Cargo.toml  LICENSE  README.md
src/: lib.rs  types.rs
tests/: compile_tests.rs  nostd.rs  tests.rs
tests/fail/: bad_name_const.rs  bad_name_const.stderr  bad_name_static.rs  bad_name_static.stderr  invalid_frequency.rs  invalid_frequency.stderr  invalid_name.rs  invalid_name.stderr  invalid_name2.rs  invalid_name2.stderr  invalid_name3.rs  invalid_name3.stderr  invalid_name4.rs  invalid_name4.stderr  invalid_rate.rs  invalid_rate.stderr  invalid_type.rs  invalid_type.stderr  invalid_values.rs  invalid_values.stderr  invalid_values2.rs  invalid_values2.stderr  invalid_values3.rs  invalid_values3.stderr  len_and_repeats.rs  len_and_repeats.stderr  negative_frequency.rs  negative_frequency.stderr  negative_len.rs  negative_len.stderr  negative_rate.rs  negative_rate.stderr  negative_repeats.rs  negative_repeats.stderr  negative_skip.rs  negative_skip.stderr  no_arguments.rs  no_arguments.stderr  repeats_and_len.rs  repeats_and_len.stderr  (+20 more)
