[package]
name = "sine_macro"
description = "Procedural macro for generating sine wave arrays"
repository = "https://github.com/Tomin1/sine_macro"
license = "MIT"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.1"
categories = ["embedded", "multimedia::audio"]
keywords = ["wave", "audio", "proc-macro"]

[lib]
proc-macro = true

[dependencies]
itertools = "0.14.0"
proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.101", features = ["full"] }

[dev-dependencies]
trybuild = "1.0.105"
